--- a/app/public/style/style.css
+++ b/app/public/style/style.css
@@ -1,3 +1,4 @@
+
 .impact-font{
     font-family: Impact;
 }
@@ -41,3 +42,34 @@
 }
 
 /***** End Website color classes *****/
+
+
+ /***** Buttons classes *****/  
+
+.primary-button{
+    border-radius: 40px;
+    border-style: none;
+    padding: 8px 40px 8px 40px;
+    background-color: #E60077;
+    color: #FFD150;
+}
+
+ /***** End buttons classes *****/  
+
+
+.header-section {
+    height: 310px;
+}
+
+
+.header-video{
+    width: 100%;
+    height: 310px;
+    object-fit: cover;
+    object-position: center 20%;
+}
+
+.object-fit-cover{
+    object-fit: cover;
+    object-position: center 100%;
+}
