--- a/app/public/style/style.css
+++ b/app/public/style/style.css
@@ -40,6 +40,10 @@
     background-color: #F9F871 ;
 }
 
+.bg-pink{
+    background-color: #E60077;
+}
+
 /***** End Website color classes *****/
 
 
@@ -68,9 +72,16 @@
     object-position: center 20%;
 }
 
+
 .object-fit-cover{
     object-fit: cover;
     object-position: center 100%;
+}
+
+/* custom css jazz */
+.card-40 {
+    width: 40vw;  
+    max-width: 100%; 
 }
 
 
