--- a/app/public/style/style.css
+++ b/app/public/style/style.css
@@ -194,3 +194,17 @@
 }
 
 /* End tickets page style */
+
+.success-container {
+    max-width: 600px;
+    margin: 100px auto;
+    background: #ffffff;
+    padding: 30px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+.success-icon {
+    font-size: 60px;
+    color: #28a745;
+}
