--- a/app/public/style/style.css
+++ b/app/public/style/style.css
@@ -6,6 +6,9 @@
     font-size: 2.2rem;
 }
 
+.round-boreder-10px{
+    border-radius: 15px;
+}
 /***** Website color classes *****/
 .purple { color: #800080; }
 .pink { color: #E60077; }
@@ -427,4 +430,9 @@
     margin-top: 30px;
     text-align: center;
 }
+
+
+
+/* Overall ticket style */
+
 
